ilibrary-chart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilibrary-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "arch.homework"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  name: web
    - host: arch.homework
      http:
        paths:
            - path: /billing
              pathType: Prefix
              backend:
                service:
                  name: billing-service
                  port:
                    name: web
    - host: arch.homework
      http:
        paths:
            - path: /notification
              pathType: Prefix
              backend:
                service:
                  name: notification-service
                  port:
                    name: web
    - host: arch.homework
      http:
        paths:
            - path: /order
              pathType: Prefix
              backend:
                service:
                  name: order-service
                  port:
                    name: web
